<resources>
    <string name="app_name">Base</string>

    <string name="email_address">Email Address</string>
    <string name="btn_login">Login</string>
    <!--    <string name="password">Password</string>-->

    <string name="mandatory_field">Mandatory Field</string>
    <string name="invalid_email">Invalid email format</string>
    <string name="invalid_password">Invalid password format</string>

    <string name="asset_statements">
        [{
            \"relation\": [\"delegate_permission/common.handle_all_urls\"],
            \"target\": {
                \"namespace\": \"web\",
                \"site\": \"https://beer.conn.dev\"}
        }]
    </string>

    <!-- Testing -->
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="not_have_account">Do not have an account?</string>
    <string name="have_account">Have an account?</string>
    <string name="signup">Sign Up</string>
    <string name="submit">Submit</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>

    <string name="msg_email_error">Please enter your email</string>
    <string name="msg_password_error">Please enter your password</string>
    <string name="msg_mismatch">Your email or password is wrong</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="EPUB_ENGINE_ROOT">file:///android_asset/epubjs/epub.html</string>

    <string name="css_tag"><![CDATA[<link rel=\"stylesheet\" type=\"text/css\" href=\"%s\" />]]></string>
    <string name="script_tag"><![CDATA[<script type=\"text/javascript\" src=\"%s\"></script>]]></string>
    <string name="title_activity_jet_pack">JetPackActivity</string>
</resources>